--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url("frontend/public/images/obschaga2.jpg");
+    background-image: url('frontend/public/images/fon.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
