--- a/frontend/src/styles/admin.css
+++ b/frontend/src/styles/admin.css
@@ -183,5 +183,47 @@ header div:last-child {
 
 
 html, body {
-    overflow: hidden;
+    overflow: clip;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.admin-body {
+    flex: 1;
+    display: flex;
+    /* остальное уже есть */
+}
+
+.admin-footer {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 20px 40px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 260px; /* учитываем ширину бокового меню */
+    width: calc(100% - 260px); /* остальная часть страницы */
+    z-index: 999;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+}
+
+.footer-content a {
+    color: #61dafb;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer-content a:hover {
+    color: #21a1f1;
 }
